# ADS599-Capstone

./: .gitignore  ADS_599_BCQ_and_DQN.ipynb  README.md  cohort_eda.ipynb  data_combine.ipynb  data_prep_classification.ipynb  data_queries.ipynb  decisions.md  lit_review.md  lstm_information_gain.ipynb  lstm_modeling.ipynb  lstm_one_hot_modeling.ipynb  lstm_step_modeling.ipynb  main.py  microbiology_eda.ipynb  modeling.ipynb  project_plan.md  pyproject.toml  rl_agent.ipynb  rl_agent_ig.ipynb  rl_agent_v2.ipynb
Modeling - Part 1/: Logistic_Regression.ipynb  Random_Forest.ipynb  XGBoost.ipynb
artifacts/: stay_id_remap.pkl
data_pipelines/: README.md
docs/: decisions.md  evaluation.md  project_plan.md  rl_iteration.md
eda/: cohort_eda.ipynb  lab_events_eda.ipynb  medications_eda.ipynb  microbiology_eda.ipynb  vitals_eda.ipynb
individual_pipelines/: admitted_meds_pipeline.ipynb  cohort_base.py  cohort_pipeline.ipynb  df_descriptions.md  ecg_data.ipynb  ed_meds_pipeline.ipynb  labs_pipeline.ipynb  medrecon_pipeline.ipynb  microbiology_pipeline.ipynb  omr_pipeline.ipynb  radiology_data.ipynb  triage_pipeline.ipynb  vitals_pipeline.ipynb
modeling/: README.md
preprocessing/: MSADS_599_Capstone.ipynb  ecg_preprocessing.ipynb  icu_transfers_preprocessing.ipynb  patient_preprocessing.ipynb  radiology_preprocessing.ipynb
project_setup/: cohort_base.py  settings.yaml
sql_scripts/: README.md  admitted_meds.sql  cohort_base.sql  ecg_data.sql  ed_meds.sql  labs.sql  medrecon.sql  microbiology.sql  omr.sql  radiology_data.sql  triage.sql  vitals.sql
utils/: bq.py  (+8 more)
(+79 files in other folders)
